var _application_2obj_2_debug_2net7_80_2_protos_2_feedback_8cs =
[
    [ "gRPCClient.Feedback", "classg_r_p_c_client_1_1_feedback.html", "classg_r_p_c_client_1_1_feedback" ],
    [ "gRPCClient.RequestAddFeedback", "classg_r_p_c_client_1_1_request_add_feedback.html", "classg_r_p_c_client_1_1_request_add_feedback" ],
    [ "gRPCClient.ResponseGetFeedback", "classg_r_p_c_client_1_1_response_get_feedback.html", "classg_r_p_c_client_1_1_response_get_feedback" ],
    [ "gRPCClient.RequestGetFeedbackById", "classg_r_p_c_client_1_1_request_get_feedback_by_id.html", "classg_r_p_c_client_1_1_request_get_feedback_by_id" ],
    [ "gRPCClient.RequestGetFeedbackByHandInIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html", "classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username" ],
    [ "gRPCClient.ResponseAddFeedback", "classg_r_p_c_client_1_1_response_add_feedback.html", "classg_r_p_c_client_1_1_response_add_feedback" ],
    [ "pb", "_application_2obj_2_debug_2net7_80_2_protos_2_feedback_8cs.html#a3a8b1403f9034aa88aad1ce2c733db60", null ],
    [ "pbc", "_application_2obj_2_debug_2net7_80_2_protos_2_feedback_8cs.html#acf353ca81053b715ef0a189df5a75499", null ],
    [ "pbr", "_application_2obj_2_debug_2net7_80_2_protos_2_feedback_8cs.html#a4c9bca18934bf8b310b9d65812404c69", null ],
    [ "scg", "_application_2obj_2_debug_2net7_80_2_protos_2_feedback_8cs.html#a6de48d7be2d1c733071a3f897657ee05", null ]
];